0.02
 - Fix bugtracker.
 - Rewrite implicit decode() to PYX::Utils::decode().
 - Update copyright years.
 - Update examples/ directory.

0.01 2020-05-01T18:15:58+02:00
 - First version.